# crypto-aggregator-be/src/main/java/dev/rudyevhenii/crypto_aggregator/workspace/dto/UpdateChartWidgetRequest.java
@@ -1,0 +1,8 @@
+package dev.rudyevhenii.crypto_aggregator.workspace.dto;
+
+import dev.rudyevhenii.crypto_aggregator.core.enums.ChartInterval;
+
+public record UpdateChartWidgetRequest(
+        ChartInterval chartInterval
+) {
+}
